@@ -1338,25 +1338,26 @@ static void VideoModeSettings(void)
 #if HAVE_OPENGL
 		UI_MENU_SUBMENU_SUFFIX(2, "Pixel format:", NULL),
 #endif /* HAVE_OPENGL */
+		UI_MENU_CHECK(3, "Vertical synchronization:"),
 #endif /* SDL */
-		UI_MENU_CHECK(3, "Fullscreen:"),
+		UI_MENU_CHECK(4, "Fullscreen:"),
 #if SUPPORTS_ROTATE_VIDEOMODE
-		UI_MENU_CHECK(4, "Rotate sideways:"),
+		UI_MENU_CHECK(5, "Rotate sideways:"),
 #endif /* SUPPORTS_ROTATE_VIDEOMODE */
-		UI_MENU_SUBMENU_SUFFIX(5, "Stretch:", NULL),
-		UI_MENU_SUBMENU_SUFFIX(6, "Fit screen method:", NULL),
-		UI_MENU_SUBMENU_SUFFIX(7, "Keep aspect ratio:", NULL),
-		UI_MENU_SUBMENU_SUFFIX(8, "Host display aspect ratio:", ratio_string),
-		UI_MENU_SUBMENU_SUFFIX(9, "Horizontal view area:", NULL),
-		UI_MENU_SUBMENU_SUFFIX(10, "Vertical view area:", NULL),
-		UI_MENU_SUBMENU_SUFFIX(11, "Horizontal offset:", horiz_offset_string),
-		UI_MENU_SUBMENU_SUFFIX(12, "Vertical offset:", vert_offset_string),
+		UI_MENU_SUBMENU_SUFFIX(6, "Stretch:", NULL),
+		UI_MENU_SUBMENU_SUFFIX(7, "Fit screen method:", NULL),
+		UI_MENU_SUBMENU_SUFFIX(8, "Keep aspect ratio:", NULL),
+		UI_MENU_SUBMENU_SUFFIX(9, "Host display aspect ratio:", ratio_string),
+		UI_MENU_SUBMENU_SUFFIX(10, "Horizontal view area:", NULL),
+		UI_MENU_SUBMENU_SUFFIX(11, "Vertical view area:", NULL),
+		UI_MENU_SUBMENU_SUFFIX(12, "Horizontal offset:", horiz_offset_string),
+		UI_MENU_SUBMENU_SUFFIX(13, "Vertical offset:", vert_offset_string),
 #if SDL
-		UI_MENU_SUBMENU_SUFFIX(13, "Scanlines visibility:", scanlines_string),
-		UI_MENU_CHECK(14, "Interpolate scanlines:"),
+		UI_MENU_SUBMENU_SUFFIX(14, "Scanlines visibility:", scanlines_string),
+		UI_MENU_CHECK(15, "Interpolate scanlines:"),
 #if HAVE_OPENGL
-		UI_MENU_CHECK(15, "Hardware acceleration:"),
-		UI_MENU_CHECK(16, "Bilinear filtering:"),
+		UI_MENU_CHECK(16, "Hardware acceleration:"),
+		UI_MENU_CHECK(17, "Bilinear filtering:"),
 #endif /* HAVE_OPENGL */
 #endif /* SDL */
 		UI_MENU_END
@@ -1380,31 +1381,38 @@ static void VideoModeSettings(void)
 			FindMenuItem(menu_array, 2)->flags = UI_ITEM_HIDDEN;
 		}
 #endif /* HAVE_OPENGL */
+		if (SDL_VIDEO_vsync && !SDL_VIDEO_vsync_available) {
+			FindMenuItem(menu_array, 3)->flags = UI_ITEM_ACTION;
+			FindMenuItem(menu_array, 3)->suffix = "N/A";
+		} else {
+			FindMenuItem(menu_array, 3)->flags = UI_ITEM_CHECK;
+			SetItemChecked(menu_array, 3, SDL_VIDEO_vsync);
+		}
 #endif /* SDL */
-		SetItemChecked(menu_array, 3, !VIDEOMODE_windowed);
+		SetItemChecked(menu_array, 4, !VIDEOMODE_windowed);
 #if SUPPORTS_ROTATE_VIDEOMODE
-		SetItemChecked(menu_array, 4, VIDEOMODE_rotate90);
+		SetItemChecked(menu_array, 5, VIDEOMODE_rotate90);
 #endif
 		if (VIDEOMODE_stretch < VIDEOMODE_STRETCH_CUSTOM)
-			FindMenuItem(menu_array, 5)->suffix = stretch_menu_array[VIDEOMODE_stretch].item;
+			FindMenuItem(menu_array, 6)->suffix = stretch_menu_array[VIDEOMODE_stretch].item;
 		else {
-			FindMenuItem(menu_array, 5)->suffix = stretch_string;
+			FindMenuItem(menu_array, 6)->suffix = stretch_string;
 			snprintf(stretch_string, sizeof(stretch_string) - 1, "%f", VIDEOMODE_custom_stretch);
 		}
-		FindMenuItem(menu_array, 6)->suffix = fit_menu_array[VIDEOMODE_fit].item;
-		FindMenuItem(menu_array, 7)->suffix = aspect_menu_array[VIDEOMODE_keep_aspect].item;
+		FindMenuItem(menu_array, 7)->suffix = fit_menu_array[VIDEOMODE_fit].item;
+		FindMenuItem(menu_array, 8)->suffix = aspect_menu_array[VIDEOMODE_keep_aspect].item;
 		VIDEOMODE_CopyHostAspect(ratio_string, 10);
 		if (VIDEOMODE_horizontal_area < VIDEOMODE_HORIZONTAL_CUSTOM)
-			FindMenuItem(menu_array, 9)->suffix = width_menu_array[VIDEOMODE_horizontal_area].item;
+			FindMenuItem(menu_array, 10)->suffix = width_menu_array[VIDEOMODE_horizontal_area].item;
 		else {
-			FindMenuItem(menu_array, 9)->suffix = horiz_area_string;
+			FindMenuItem(menu_array, 10)->suffix = horiz_area_string;
 			/* sprintf is safe - horizontal area can't be higher than 384. */
 			sprintf(horiz_area_string, "%d", VIDEOMODE_custom_horizontal_area);
 		}
 		if (VIDEOMODE_vertical_area < VIDEOMODE_VERTICAL_CUSTOM)
-			FindMenuItem(menu_array, 10)->suffix = height_menu_array[VIDEOMODE_vertical_area].item;
+			FindMenuItem(menu_array, 11)->suffix = height_menu_array[VIDEOMODE_vertical_area].item;
 		else {
-			FindMenuItem(menu_array, 10)->suffix = vert_area_string;
+			FindMenuItem(menu_array, 11)->suffix = vert_area_string;
 			/* sprintf is safe - vertical area can't be higher than 240. */
 			sprintf(vert_area_string, "%d", VIDEOMODE_custom_vertical_area);
 		}
@@ -1414,10 +1422,10 @@ static void VideoModeSettings(void)
 #if SDL
 		/* sprintf is safe - scanlines percentage can't be higher than 100. */
 		sprintf(scanlines_string, "%d", SDL_VIDEO_scanlines_percentage);
-		SetItemChecked(menu_array, 14, SDL_VIDEO_interpolate_scanlines);
+		SetItemChecked(menu_array, 15, SDL_VIDEO_interpolate_scanlines);
 #if HAVE_OPENGL
-		SetItemChecked(menu_array, 15, SDL_VIDEO_opengl);
-		SetItemChecked(menu_array, 16, SDL_VIDEO_GL_filtering);
+		SetItemChecked(menu_array, 16, SDL_VIDEO_opengl);
+		SetItemChecked(menu_array, 17, SDL_VIDEO_GL_filtering);
 #endif /* HAVE_OPENGL */
 #endif /* SDL */
 
@@ -1468,16 +1476,20 @@ static void VideoModeSettings(void)
 				SDL_VIDEO_GL_SetPixelFormat(option2);
 			break;
 #endif /* HAVE_OPENGL */
-#endif /* SDL */
 		case 3:
+			if (!SDL_VIDEO_ToggleVsync())
+				UI_driver->fMessage("Not available in this video mode.", 1);
+			break;
+#endif /* SDL */
+		case 4:
 			VIDEOMODE_ToggleWindowed();
 			break;
 #if SUPPORTS_ROTATE_VIDEOMODE
-		case 4:
+		case 5:
 			VIDEOMODE_ToggleRotate90();
 			break;
 #endif
-		case 5:
+		case 6:
 			option2 = UI_driver->fSelect(NULL, UI_SELECT_POPUP, VIDEOMODE_stretch, stretch_menu_array, NULL);
 			if (option2 >= 0) {
 				if (option2 < VIDEOMODE_STRETCH_CUSTOM)
@@ -1490,17 +1502,17 @@ static void VideoModeSettings(void)
 				}
 			}
 			break;
-		case 6:
+		case 7:
 			option2 = UI_driver->fSelect(NULL, UI_SELECT_POPUP, VIDEOMODE_fit, fit_menu_array, NULL);
 			if (option2 >= 0)
 				VIDEOMODE_SetFit(option2);
 			break;
-		case 7:
+		case 8:
 			option2 = UI_driver->fSelect(NULL, UI_SELECT_POPUP, VIDEOMODE_keep_aspect, aspect_menu_array, NULL);
 			if (option2 >= 0)
 				VIDEOMODE_SetKeepAspect(option2);
 			break;
-		case 8:
+		case 9:
 			{
 				char buffer[sizeof(ratio_string)];
 				memcpy(buffer, ratio_string, sizeof(buffer));
@@ -1508,7 +1520,7 @@ static void VideoModeSettings(void)
 					VIDEOMODE_SetHostAspectString(buffer);
 			}
 			break;
-		case 9:
+		case 10:
 			option2 = UI_driver->fSelect(NULL, UI_SELECT_POPUP, VIDEOMODE_horizontal_area, width_menu_array, NULL);
 			if (option2 >= 0) {
 				if (option2 < VIDEOMODE_HORIZONTAL_CUSTOM)
@@ -1525,7 +1537,7 @@ static void VideoModeSettings(void)
 				}
 			}
 			break;
-		case 10:
+		case 11:
 			option2 = UI_driver->fSelect(NULL, UI_SELECT_POPUP, VIDEOMODE_vertical_area, height_menu_array, NULL);
 			if (option2 >= 0) {
 				if (option2 < VIDEOMODE_VERTICAL_CUSTOM)
@@ -1542,7 +1554,7 @@ static void VideoModeSettings(void)
 				}
 			}
 			break;
-		case 11:
+		case 12:
 			switch (seltype) {
 			case UI_USER_SELECT:
 				{
@@ -1557,7 +1569,7 @@ static void VideoModeSettings(void)
 				break;
 			}
 			break;
-		case 12:
+		case 13:
 			switch (seltype) {
 			case UI_USER_SELECT:
 				{
@@ -1573,7 +1585,7 @@ static void VideoModeSettings(void)
 			}
 			break;
 #if SDL
-		case 13:
+		case 14:
 			{
 				char buffer[sizeof(scanlines_string)];
 				memcpy(buffer, scanlines_string, sizeof(buffer));
@@ -1581,17 +1593,17 @@ static void VideoModeSettings(void)
 					SDL_VIDEO_SetScanlinesPercentage(atoi(buffer));
 			}
 			break;
-		case 14:
+		case 15:
 			SDL_VIDEO_ToggleInterpolateScanlines();
 			break;
 #if HAVE_OPENGL
-		case 15:
+		case 16:
 			SDL_VIDEO_ToggleOpengl();
 			if (!SDL_VIDEO_opengl_available)
 				UI_driver->fMessage("Error: OpenGL is not available.", 1);
 				
 			break;
-		case 16:
+		case 17:
 			if (!SDL_VIDEO_opengl)
 				UI_driver->fMessage("Works only with hardware acceleration.", 1);
 			SDL_VIDEO_GL_ToggleFiltering();
